components/kubearchive/staging/stone-stg-rh01/kubearchive-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    haproxy.router.openshift.io/hsts_header: max-age=63072000
    haproxy.router.openshift.io/timeout: 86410s
    route.openshift.io/destination-ca-certificate-secret: kubearchive-ca
    route.openshift.io/termination: reencrypt
    router.openshift.io/haproxy.health.check.interval: 86400s
  labels:
    app.kubernetes.io/name: kubearchive-api-server
    app.kubernetes.io/component: api-server
    app.kubernetes.io/part-of: kubearchive
  name: kubearchive-api-server
  namespace: product-kubearchive
spec:
  rules:
    - host: kubearchive-api-server-product-kubearchive.apps.stone-stg-rh01.l2vh.p1.openshiftapps.com
      http:
        paths:
          - backend:
              service:
                name: kubearchive-api-server
                port:
                  number: 8081
            path: /
            pathType: Prefix
